--- a/app/views/preppee/open_request.html.erb
+++ b/app/views/preppee/open_request.html.erb
@@ -35,8 +35,8 @@
 		            	<%= p.description %>
 		            <% end %>
 		          </p>
-		          <div class="pull-left blog-page blog-item">
-			         	<ul class="unstyled inline blog-tags">
+		          <div class="pull-left">
+			         	<ul class="inline blog-tags">
 			         		<%
 			         			required_skills = p.required_skills.split(',')
 			         		%>
