add carousel for books and fast setup section

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -3,26 +3,25 @@
 <div class="footer">
 	<div class="container">
 		<div class="row-fluid">
-			<div class="span2">
-                <!-- About -->
-		        <p><a>About Us</a></p>
-			</div><!--/span4-->	
-			
-			<div class="span2">
-	            <!-- Monthly Newsletter -->
-                <p><a>Trust and Safety</a></p>
-                <p><a>Help and Support</a></p>
-			</div><!--/span4-->
-            <div class="span2">
-                <!-- Monthly Newsletter -->
-                <p><a>Terms of Service</a></p>
-                <p><a>Privacy policy</a></p>
-            </div><!--/span4-->
-            <div class="span2">
-                <!-- Stay Connected -->
-                <p><a>Resources</a></p>
+            <div class="span7">
+                <div class="row-fluid">
+        			<div class="span3">
+                        <!-- About -->
+        		        <p><a>About Us</a></p>
+        			</div><!--/span4-->	
+        			<div class="span3">
+                        <p><a>Trust and Safety</a></p>
+          			</div><!--/span4-->
+                    <div class="span3">
+                        <p><a>Help and Support</a></p>
+                    </div><!--/span4-->
+                    <div class="span3">
+                        <p><a>Resources</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="span3 pull-right">
+
+            <div class="span4 pull-right">
                 <ul class="social-icons">
                     <li>
                         <a href="http://facebook.com" data-original-title="Facebook" class="social_facebook"></a>
