--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,7 +45,7 @@
 		      Unify is an incredibly beautiful responsive Bootstrap Template for corporate and creative professionals. It works on all major web browsers, tablets and phone.</h3> 
 		    </div><!--/span6-->
 		    <div class="span6">
-          <div id="fast-setup" class="carousel slide">
+          <div id="fast-setup" class="carousel slide carousel-fade">
             <div class="carousel-inner">
               <div class="item active">
     	          <img src="/assets/carousel/5.jpg" alt="">
@@ -96,9 +96,9 @@
 	</div>
 	<hr>
   <!-- Guidebook Blokcs -->
-  <div class="list_carousel">
+  <div class="list_carousel container">
   	<h2 style="border: 1px;"><center>Sleekgeek Prep guides</center></h2>
-	  <ul id="guides" class="inline container center">
+	  <ul id="guides" class="inline">
 	    <li><img src="assets/book/1.jpeg"></li>
 	    <li><img src="assets/book/2.jpeg"></li>
 	    <li><img src="assets/book/3.jpeg"></li>
@@ -106,6 +106,11 @@
 	    <li><img src="assets/book/5.jpeg"></li>
 	    <li><img src="assets/book/1.jpeg"></li>
 	    <li><img src="assets/book/2.jpeg"></li>
+	    <li><img src="assets/book/3.jpeg"></li>
+	    <li><img src="assets/book/3.jpeg"></li>
+	    <li><img src="assets/book/3.jpeg"></li>
+	    <li><img src="assets/book/3.jpeg"></li>
+	    <li><img src="assets/book/3.jpeg"></li>
 	    <li><img src="assets/book/3.jpeg"></li>
 	  </ul>
 	  <div class="clearfix"></div>
@@ -124,6 +129,17 @@
 <!-- End Content Part -->
 <script type="text/javascript">
 $(function(){
-	//$("#guides").carouFredSel();
+	$('#guides').carouFredSel({
+					width: '100%',
+					scroll : {
+	            items           : 1,
+	            duration        : 1000,
+	            pauseOnHover    : true
+	        },
+	        swipe: {
+						onMouse: true,
+						onTouch: true
+					}
+				});
 });
 </script>
