--- a/app/views/profiles/_edit_overview.html.erb
+++ b/app/views/profiles/_edit_overview.html.erb
@@ -1,4 +1,4 @@
-<div id="profile-overview" class="modal" style="display: none;">
+<div id="profile-overview" class="modal fade" style="display: none;">
   <%= simple_form_for @profile, :url => profile_path(@profile), :html => {:method => :put, :class => 'form-horizontal' } do |p| %>
     <div class="modal-header">
       <a class="close" data-dismiss="modal">&#215;</a>
