--- a/app/views/profiles/_edit_education.html.erb
+++ b/app/views/profiles/_edit_education.html.erb
@@ -30,7 +30,7 @@
       </div>
     </div>
     <div class="controls form-inline">
-      <%= p.submit "Add", :class => "btn btn-success" %>
+      <%= p.submit "Save", :class => "btn btn-success" %>
       <a class="btn" onclick="$('#education-<%= education.id %>').collapse('hide');">Cancel</a>
     </div>
   <% end %>
