--- a/app/views/shared/_landing_menu.html.erb
+++ b/app/views/shared/_landing_menu.html.erb
@@ -1,15 +1,23 @@
-  <li class="active">
-    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Prepped</a>
-  </li>
-  <li>
-  <a href="" class="dropdown-toggle" data-toggle="dropdown">Become a Prepper</a>
-  </li>
-  <li>
-    <a href="" class="dropdown-toggle" data-toggle="dropdown">Prep Guides</a>
-  </li>
-  <li>
-    <a href="" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
-  </li>
-  <li>
-    <%= link_to 'Login', new_user_session_path, class: "btn-u btn-large" %>
-  </li>
+<% if signup_page # signup page %>
+  <h4 class="loginbar pull-right">
+    Alreay have an prep account? <%= link_to 'Login', new_user_session_path %>
+  </h4>
+<% else %>
+  <ul class="nav top-2">
+    <li class="active">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Get Prepped</a>
+    </li>
+    <li>
+    <a href="" class="dropdown-toggle" data-toggle="dropdown">Become a Prepper</a>
+    </li>
+    <li>
+      <a href="" class="dropdown-toggle" data-toggle="dropdown">Prep Guides</a>
+    </li>
+    <li>
+      <a href="" class="dropdown-toggle" data-toggle="dropdown">Blog</a>
+    </li>
+    <li>
+      <%= link_to 'Login', new_user_session_path, class: "btn-u btn-large" %>
+    </li>
+  </ul>
+<% end %>
