--- a/app/views/shared/_preppee_menu.html.erb
+++ b/app/views/shared/_preppee_menu.html.erb
@@ -1,9 +1,11 @@
-<li class="<%= active_menu_class('preppee', :scheduled) %>">
-  <%= link_to 'Scheduled Preps', '/preppee/scheduled' %>
-</li>
-<li class="<%= active_menu_class('preppee', :open_request) %>">
-  <%= link_to 'Open Requests', '/preppee/open_request' %>
-</li>
-<li class="">
-	<%= link_to 'Provide Feedback' %>
-</li>
+<ul class="nav top-2">
+	<li class="<%= active_menu_class('preppee', :scheduled) %>">
+	  <%= link_to 'Scheduled Preps', '/preppee/scheduled' %>
+	</li>
+	<li class="<%= active_menu_class('preppee', :open_request) %>">
+	  <%= link_to 'Open Requests', '/preppee/open_request' %>
+	</li>
+	<li class="">
+		<%= link_to 'Provide Feedback' %>
+	</li>
+</ul>
