--- a/app/views/shared/_profile_sidebar.html.erb
+++ b/app/views/shared/_profile_sidebar.html.erb
@@ -1,6 +1,5 @@
-<div class="span3">
+<div class="span3 white-background">
 	<!-- Left Panel -->
-	<h5><strong>User Settings</strong></h5>
   <ul class="nav nav-pills nav-stacked">
 		<li class="<%= profile_sidebar_class('registrations') %>">
 			<%= link_to 'User Account', edit_user_registration_path %>
