--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -13,12 +13,15 @@
 				<div class="control-group">
 	        <%= p.label :portrait, 'Portrait (Optional)', :class => 'control-label' %>
 	        <div class="controls">
-	        	<div style="width: 120px; float: left; margin-right: 10px;">
-	          	<img id="photo" src="/assets/blank_user.jpg">
-	          </div>
+	        	<div class="pull-left">
+		        	<div class="profile-img-wrapper">
+		        		<span></span>
+		          	<img id="photo" src="/assets/blank_user.jpg">
+		          </div>
+		        </div>
 	          <div class="pull-left" id="profile-photo">
 							<h4 class="color-black">You need a photo!</h4>
-							<p>Contractors with a friendly, professional looking portrait are hired</p>
+							<p>Preppers with a friendly, professional looking portrait are hired</p>
 							<p><span class="color-black"><b>5 times more often</b></span> than those without a photo</p>
 
 							<a id="profile_photo_link">Add Photo</a>
@@ -58,9 +61,9 @@
 		    <%= p.input :address, required: true %>
 		    <%= p.input :city, required: true %>
 		    <%= p.input :country, required: true %>
-		    <%= p.input :zipcode, required: true %>
+		    <%= p.input :zipcode, required: true, label: "Zip code" %>
 		    <%#= p.input :state, required: true %>
-		    <%= p.input :phone %>
+		    <%= p.input :phone, :class => "input-mask-phone" %>
 	      <div class="controls form-inline">
 	      	<%= p.submit "Save", :class => "btn-u" %>
 	      </div>
