--- a/app/views/prepper/open_request.html.erb
+++ b/app/views/prepper/open_request.html.erb
@@ -8,24 +8,23 @@
 			<% @preps.each do |p| %>
 		    <div class="row-fluid">
 		      <div class="booking-blocks">
-		        <div class="span3 pull-left booking-img">
+		        <div class="pull-left booking-img">
 		        	<div class="row-fluid">
  								<%= image_tag p.user.profile.photo.url(:medium) %>
+ 								<h5>
+		            	<strong>
+		            		<%= p.user.fullname %>
+		            	</strong>
+		            </h5>
+		            <ul class="unstyled inline">
+		               <li><span class="rating-static rating-45"></span></li>
+		               <li><i class="icon-star"></i></li>
+		               <li><i class="icon-star"></i></li>
+		               <li><i class="icon-star"></i></li>
+		               <li><i class="icon-star"></i></li>
+		               <li><i class="icon-star-empty"></i></li>
+		            </ul>
  							</div>
-	            
-	            <h5>
-	            	<strong>
-	            		<%= p.user.fullname %>
-	            	</strong>
-	            </h5>
-	            <ul class="unstyled inline">
-	               <li><span class="rating-static rating-45"></span></li>
-	               <li><i class="icon-star"></i></li>
-	               <li><i class="icon-star"></i></li>
-	               <li><i class="icon-star"></i></li>
-	               <li><i class="icon-star"></i></li>
-	               <li><i class="icon-star-empty"></i></li>
-	            </ul>
 		        </div>
 		        <div class="span8" style="overflow:hidden;">
 	            <h2><%= link_to p.title, prep_path(p), :class => 'color-blue' %></a></h2>
