--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -50,3 +50,7 @@ input[type="button"].btn, input[type="submit"].btn
 	box-shadow: 5px 5px 5px #888888;
 	
 }
+
+.img-circle {
+  border-radius: 500px 500px 500px 500px !important;
+}
